# aria_bot

./: .gitignore  README.md  app.py  bot.py  config.py  env.example  main.py  pyproject.toml  requirements.txt
data/text_files/: AI Bootcamp Journey & Learning Path.docx.md  Intern FAQ - AI Bootcamp.md  Training For AI Engineer Interns.md
data/vector_store/7704ea85-98b6-4bc4-be3e-a54f073167e2/: index_metadata.pickle
notebook/: document.ipynb
src/: __init__.py  data_loader.py  embedding.py  search.py  vectorstore.py
